// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api should search, load and save a project 1`] = `
Object {
  "description": "testSuunnitteluvaihePerustiedot",
  "obj": Object {
    "__typename": "SuunnitteluVaihe",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "julkinen": undefined,
    "palautteet": undefined,
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "vuorovaikutukset": Array [],
  },
}
`;

exports[`Api should search, load and save a project 2`] = `
Object {
  "description": "testSuunnitteluvaiheVuorovaikutus",
  "obj": Object {
    "__typename": "SuunnitteluVaihe",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "julkinen": undefined,
    "palautteet": undefined,
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "vuorovaikutukset": Array [
      Object {
        "__typename": "Vuorovaikutus",
        "aineistot": undefined,
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 1",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 1,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 1",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 1",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "A000112",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "A000112",
        ],
      },
      Object {
        "__typename": "Vuorovaikutus",
        "aineistot": undefined,
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 2",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 2,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 2",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 2",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "A000112",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "A000112",
        ],
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 3`] = `
Object {
  "description": "added A000111 to vuorovaikutus and vuorovaikutustilaisuus",
  "obj": Object {
    "added": Object {
      "vuorovaikutukset": Object {
        "1": Object {
          "vuorovaikutusTilaisuudet": Object {
            "2": Object {
              "projektiYhteysHenkilot": Object {
                "1": "A000111",
              },
            },
          },
          "vuorovaikutusYhteysHenkilot": Object {
            "1": "A000111",
          },
        },
      },
    },
    "deleted": Object {},
    "updated": Object {},
  },
}
`;

exports[`Api should search, load and save a project 4`] = `
Object {
  "description": "saveAndVerifyAineistoSave",
  "obj": Object {
    "__typename": "Vuorovaikutus",
    "aineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
        "jarjestys": 1,
        "kategoria": "Tietomallinnus",
        "tila": "ODOTTAA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 2,
        "kategoria": "Yleinen",
        "tila": "ODOTTAA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 3,
        "kategoria": "Yleinen",
        "tila": "ODOTTAA",
      },
    ],
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "suunnittelumateriaali": undefined,
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 1,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "esitettavatYhteystiedot": undefined,
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": undefined,
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "projektiYhteysHenkilot": Array [
          "A000112",
        ],
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
    "vuorovaikutusYhteysHenkilot": Array [
      "A000112",
    ],
  },
}
`;

exports[`Api should search, load and save a project 5`] = `
Object {
  "description": "saveAndVerifyAineistoSave",
  "obj": Object {
    "__typename": "Vuorovaikutus",
    "aineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
        "jarjestys": 11,
        "kategoria": "Tietomallinnus new",
        "tila": "ODOTTAA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 12,
        "kategoria": "Yleinen new",
        "tila": "ODOTTAA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 13,
        "kategoria": "Yleinen new",
        "tila": "ODOTTAA",
      },
    ],
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "suunnittelumateriaali": undefined,
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 1,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "esitettavatYhteystiedot": undefined,
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": undefined,
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "projektiYhteysHenkilot": Array [
          "A000112",
        ],
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
    "vuorovaikutusYhteysHenkilot": Array [
      "A000112",
    ],
  },
}
`;

exports[`Api should search, load and save a project 6`] = `
Object {
  "description": "saveAndVerifyAineistoSave",
  "obj": Object {
    "__typename": "Vuorovaikutus",
    "aineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 12,
        "kategoria": "Yleinen new",
        "tila": "ODOTTAA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 13,
        "kategoria": "Yleinen new",
        "tila": "ODOTTAA",
      },
    ],
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "suunnittelumateriaali": undefined,
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 1,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "esitettavatYhteystiedot": undefined,
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": undefined,
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "projektiYhteysHenkilot": Array [
          "A000112",
        ],
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
    "vuorovaikutusYhteysHenkilot": Array [
      "A000112",
    ],
  },
}
`;

exports[`Api should search, load and save a project 7`] = `
Array [
  Object {
    "Records": Array [
      Object {
        "body": "{\\"oid\\":\\"1.2.246.578.5.1.2978288874.2711575506\\",\\"vuorovaikutusNumero\\":1}",
      },
    ],
  },
]
`;

exports[`Api should search, load and save a project 8`] = `
Object {
  "__typename": "Vuorovaikutus",
  "aineistot": Array [
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
      "jarjestys": 12,
      "kategoria": "Yleinen new",
      "tiedosto": "/suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
      "jarjestys": 13,
      "kategoria": "Yleinen new",
      "tiedosto": "/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
  ],
  "esitettavatYhteystiedot": Array [
    Object {
      "__typename": "Yhteystieto",
      "etunimi": "Marko",
      "organisaatio": "Kajaani",
      "puhelinnumero": "0293121213",
      "sahkoposti": "markku.koi@koi.com",
      "sukunimi": "Koi",
    },
  ],
  "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
  "suunnittelumateriaali": undefined,
  "videot": Array [
    Object {
      "__typename": "Linkki",
      "nimi": "Esittely 1",
      "url": "https://video",
    },
  ],
  "vuorovaikutusJulkaisuPaiva": "2022-03-23",
  "vuorovaikutusNumero": 1,
  "vuorovaikutusTilaisuudet": Array [
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "15:00",
      "esitettavatYhteystiedot": undefined,
      "kaytettavaPalvelu": "TEAMS",
      "linkki": "https://linkki_tilaisuuteen",
      "nimi": "Lorem ipsum 1",
      "paattymisAika": "16:00",
      "paivamaara": "2022-03-04",
      "tyyppi": "VERKOSSA",
    },
    Object {
      "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "10:00",
      "esitettavatYhteystiedot": undefined,
      "nimi": "Lorem ipsum two 1",
      "osoite": "Katu 123",
      "paattymisAika": "11:00",
      "paikka": "Kunnantalo",
      "paivamaara": "2022-04-05",
      "postinumero": "00100",
      "postitoimipaikka": "Helsinki",
      "tyyppi": "PAIKALLA",
    },
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "10:00",
      "esitettavatYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
      "nimi": "Soittoaikatilaisuuden nimi tässä",
      "paattymisAika": "11:00",
      "paivamaara": "2022-04-05",
      "projektiYhteysHenkilot": Array [
        "A000112",
      ],
      "tyyppi": "SOITTOAIKA",
    },
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "12:00",
      "esitettavatYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
      "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
      "paattymisAika": "13:00",
      "paivamaara": "2033-04-05",
      "tyyppi": "SOITTOAIKA",
    },
  ],
  "vuorovaikutusYhteysHenkilot": Array [
    "A000112",
  ],
}
`;

exports[`Api should search, load and save a project 9`] = `
Object {
  "description": "publicProjekti ennen suunnitteluvaihetta",
  "obj": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisut": Array [
      Object {
        "__typename": "AloitusKuulutusJulkaisuJulkinen",
        "aloituskuulutusPDFt": Object {
          "SUOMI": Object {
            "aloituskuulutusIlmoitusPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf",
            "aloituskuulutusPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf",
          },
          "__typename": "AloitusKuulutusPDFt",
        },
        "hankkeenKuvaus": Object {
          "RUOTSI": "På Svenska",
          "SAAME": "Saameksi",
          "SUOMI": "Lorem Ipsum",
          "__typename": "HankkeenKuvaukset",
        },
        "kielitiedot": Object {
          "__typename": "Kielitiedot",
          "ensisijainenKieli": "SUOMI",
        },
        "kuulutusPaiva": "2022-01-02",
        "siirtyySuunnitteluVaiheeseen": "2022-01-01",
        "suunnitteluSopimus": Object {
          "__typename": "SuunnitteluSopimus",
          "email": "Joku.Jossain@vayla.fi",
          "etunimi": "Joku",
          "kunta": "Nokia",
          "logo": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelusopimus/logo.png",
          "puhelinnumero": "123",
          "sukunimi": "Jossain",
        },
        "tila": "HYVAKSYTTY",
        "velho": Object {
          "__typename": "VelhoJulkinen",
          "asiatunnusELY": undefined,
          "asiatunnusVayla": undefined,
          "kunnat": Array [
            "Helsinki",
            " Vantaa",
          ],
          "kuvaus": undefined,
          "maakunnat": undefined,
          "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
          "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
          "tilaajaOrganisaatio": "Väylävirasto",
          "toteuttavaOrganisaatio": undefined,
          "tyyppi": "TIE",
          "vaylamuoto": Array [
            "tie",
          ],
        },
        "yhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
    ],
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "oid": "1.2.246.578.5.1.2978288874.2711575506",
    "paivitetty": "***unit test***",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "mikko.haapamki@cgi.com",
        "id": "0",
        "nimi": "Hassu, A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
      },
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "mikko.haapamaki@cgi.com",
        "id": "1",
        "nimi": "Hassu, A-Tunnus",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
      },
    ],
    "status": "ALOITUSKUULUTUS",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": Array [
        "Helsinki",
        " Vantaa",
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        "Uusimaa",
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "tilaajaOrganisaatio": "Väylävirasto",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 10`] = `
Object {
  "description": "projekti palaute lisätty",
  "obj": Array [
    Object {
      "__typename": "Palaute",
      "etunimi": "Matti",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liite": "/palautteet/***unittest***/logo.png",
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Meikalainen",
      "vastaanotettu": "2022-05-25T12:45",
      "yhteydenottotapaEmail": false,
      "yhteydenottotapaPuhelin": true,
    },
  ],
}
`;

exports[`Api should search, load and save a project 11`] = `
Object {
  "description": "projekti palaute otettu käsittelyyn",
  "obj": Array [
    Object {
      "__typename": "Palaute",
      "etunimi": "Matti",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liite": "/palautteet/***unittest***/logo.png",
      "otettuKasittelyyn": true,
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Meikalainen",
      "vastaanotettu": "2022-05-25T12:45",
      "yhteydenottotapaEmail": false,
      "yhteydenottotapaPuhelin": true,
    },
  ],
}
`;

exports[`Api should search, load and save a project 12`] = `
Object {
  "description": "publicProjekti suunnitteluvaihe",
  "obj": Object {
    "__typename": "SuunnitteluVaiheJulkinen",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "vuorovaikutukset": Array [
      Object {
        "__typename": "VuorovaikutusJulkinen",
        "aineistot": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
            "jarjestys": 12,
            "kategoria": "Yleinen new",
            "tiedosto": "/suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
            "jarjestys": 13,
            "kategoria": "Yleinen new",
            "tiedosto": "/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "julkinen": true,
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 1",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 1,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 1",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 1",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "A000112",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "0",
        ],
        "vuorovaikutusYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      Object {
        "__typename": "VuorovaikutusJulkinen",
        "aineistot": undefined,
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 2",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 2,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 2",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 2",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "A000112",
              "A000111",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "0",
          "1",
        ],
        "vuorovaikutusYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-Tunnus",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamaki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 13`] = `
Object {
  "yllapito S3 files just after vuorovaikutus published": Object {
    "aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {},
    "aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {},
    "palautteet/***unittest***/logo.png": Object {},
    "suunnittelusopimus/logo.png": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {},
  },
}
`;

exports[`Api should search, load and save a project 14`] = `
Object {
  "public S3 files just after vuorovaikutus published": Object {
    "aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 15`] = `
Object {
  "DistributionId": "unit-test-distribution-id",
  "InvalidationBatch": Object {
    "CallerReference": "***unittest***",
    "Paths": Object {
      "Items": Array [
        "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/*",
      ],
      "Quantity": 1,
    },
  },
}
`;

exports[`Api should search, load and save a project 16`] = `
Object {
  "yllapito S3 files vuorovaikutus publish date changed and last aineisto deleted": Object {
    "aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {},
    "aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {},
    "palautteet/***unittest***/logo.png": Object {},
    "suunnittelusopimus/logo.png": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {},
  },
}
`;

exports[`Api should search, load and save a project 17`] = `
Object {
  "public S3 files vuorovaikutus publish date changed and last aineisto deleted": Object {
    "aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 18`] = `
Object {
  "DistributionId": "unit-test-distribution-id",
  "InvalidationBatch": Object {
    "CallerReference": "***unittest***",
    "Paths": Object {
      "Items": Array [
        "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/*",
      ],
      "Quantity": 1,
    },
  },
}
`;

exports[`Api should search, load and save a project 19`] = `
Array [
  Object {
    "emailOptions": Object {
      "subject": "Valtion liikenneväylien suunnittelu: Uusi projekti perustettu ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmään on tuotu Projektivelhosta projektisi:
HASSU AUTOMAATTITESTIPROJEKTI1
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
HASSU AUTOMAATTITESTIPROJEKTI1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
HASSU AUTOMAATTITESTIPROJEKTI1
aloituskuulutus on hyväksytty.
Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus
Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen laatijaksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "KUULUTUS SUUNNITTELUN ALOITTAMISESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf",
        },
      ],
      "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
HASSU AUTOMAATTITESTIPROJEKTI1
aloituskuulutus on hyväksytty. Liitteenä aloituskuulutus PDF-tiedostona, muistathan viedä sen asiakirjanhallintaan.

Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus

Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA HASSU AUTOMAATTITESTIPROJEKTI1.pdf",
        },
      ],
      "subject": "TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA ILMOITTAMINEN - HASSU AUTOMAATTITESTIPROJEKTI1",
      "text": "TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA ILMOITTAMINEN

HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee suunnittelun ja maastotöiden aloittamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla vähintään 30 päivän ajan siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä. 

Kuulutus julkaistaan 2.1.2022, Väyläviraston tietoverkossa osoitteessa https://vayla.fi/kuulutukset. 

Väylävirasto pyytää suunnittelualueen kuntia julkisemaan julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä. Ilmoituksen nähtävillä oloa ei tarvitse todentaa Väylävirastolle. 

Lorem Ipsum

Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä, tutustu verkkosivujen tietosuojaosioon osoitteessa https://vayla.fi/tietosuoja. 

Lisätietoja antaa 
CGI Suomi Oy, A-tunnus1 Hassu, puh. 123, mikko.haapamki@cgi.com 
Kajaani, Marko Koi, puh. 0293121213, markku.koi@koi.com ",
      "to": Array [],
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Suunnitelmaan on tullut palautetta",
      "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
      "to": "mikko.haapamaki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Suunnitelmaan on tullut palautetta",
      "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
      "to": "mikko.haapamki@cgi.com",
    },
  },
]
`;
